# HedgeArbitrage

./: CMakeLists.txt
include/: getData.h  kit.h
src/: getData.cpp  getData.py  kit.cpp  main.cpp
