cmake_minimum_required(VERSION 3.14)
project(HedgeArbitrage)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS_DEBUG "/O2")   
include_directories(include)
include_directories(D:/boost_1_72_0)
include_directories(E:/CLionProjects/MYtoolForMSVC/MyTool/include)
include_directories(E:/CLionProjects/MYtoolForMSVC/include/armadillo-9.800.4/include)
include_directories(E:/CLionProjects/MYtoolForMSVC/include/OpenBLAS-0.3.6-x64/include)
include_directories(D:/ProgramData/Anaconda3/include)
include_directories(E:/CLionProjects/MYtoolForMSVC/include/simdjson)
include_directories(E:/CLionProjects/MYtoolForMSVC/include/stats-master/stats_incl/dens)
include_directories(E:/CLionProjects/MYtoolForMSVC/include/ocilib4.6.3)
include_directories(E:/CLionProjects/MYtoolForMSVC/include/nolhmann)
include_directories(E:/CLionProjects/MYtoolForMSVC/MyTool/include)
include_directories(E:/CLionProjects/MYtoolForMSVC/include/gcem-master)
include_directories(E:/CLionProjects/MYtoolForMSVC/include/gcem-master/gcem_incl)
include_directories(E:/CLionProjects/MYtoolForMSVC/include/stats-master/stats_incl)
include_directories(E:/CLionProjects/MYtoolForMSVC/include/gcem-master/gcem_incl/quadrature)
include_directories(E:/CLionProjects/MYtoolForMSVC/include/stats-master/stats_incl/quant)
include_directories(E:/CLionProjects/MYtoolForMSVC/include/stats-master/stats_incl/misc/internal_fns)
include_directories(E:/CLionProjects/MYtoolForMSVC/include)
include_directories(E:/CLionProjects/MYtoolForMSVC/include/stats-master/stats_incl/misc)
include_directories(E:/CLionProjects/MYtoolForMSVC/include/stats-master/stats_incl/misc/sanity_checks)
include_directories(E:/CLionProjects/MYtoolForMSVC/include/stats-master)
include_directories(E:/CLionProjects/MYtoolForMSVC/include/stats-master/stats_incl/rand)
include_directories(E:/CLionProjects/MYtoolForMSVC/include)
include_directories(E:/CLionProjects/MYtoolForMSVC/include/stats-master/stats_incl/prob)
include_directories(E:/CLionProjects/HedgeArbitrage/include)
include_directories(E:/CLionProjects/MYtoolForMSVC/include/stats-master/stats_incl/misc/matrix_ops)
include_directories(E:/CLionProjects/MYtoolForMSVC/include/fftw-3.3.5-dll64)
link_directories(bin)
link_directories(D:/boost_1_72_0/bin.v2/libs)
link_directories(D:/ProgramData/Anaconda3/libs)
include_directories(E:/CLionProjects/MYtoolForMSVC/bin/tbb)
include_directories(E:/CLionProjects/MYtoolForMSVC/bin/ocilib4.6.3)
include_directories(E:/CLionProjects/MYtoolForMSVC/bin/fftw-3.3.5-dll64)
include_directories(E:/CLionProjects/MYtoolForMSVC/bin)
add_executable(HedgeArbitrage
E:/CLionProjects/MYtoolForMSVC/src/simdjson/simdjson.cpp
E:/CLionProjects/MYtoolForMSVC/MyTool/src/ioStuff.cpp
E:/CLionProjects/HedgeArbitrage/src/main.cpp
E:/CLionProjects/MYtoolForMSVC/MyTool/src/strStuff.cpp
E:/CLionProjects/MYtoolForMSVC/MyTool/src/myOracle.cpp
E:/CLionProjects/HedgeArbitrage/src/kit.cpp
E:/CLionProjects/HedgeArbitrage/src/getData.cpp
E:/CLionProjects/MYtoolForMSVC/MyTool/src/glob.cpp
E:/CLionProjects/MYtoolForMSVC/include/tbb/internal/_template_helpers.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/atomic.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/internal/_concurrent_queue_impl.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/critical_section.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/aggregator.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/internal/_tbb_windef.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/iterators.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/blocked_range3d.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/machine/gcc_generic.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/tbb_allocator.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/machine/icc_generic.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/concurrent_queue.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/partitioner.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/internal/_tbb_strings.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/blocked_range.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/internal/_x86_rtm_rw_mutex_impl.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/parallel_sort.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/tbb_profiling.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/internal/_flow_graph_indexer_impl.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/machine/windows_api.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/parallel_invoke.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/blocked_range2d.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/global_control.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/tbb_machine.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/internal/_flow_graph_body_impl.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/internal/_flow_graph_trace_impl.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/concurrent_unordered_map.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/machine/msvc_armv7.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/parallel_reduce.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/tbb.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/internal/_flow_graph_async_msg_impl.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/queuing_rw_mutex.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/tbb_stddef.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/memory_pool.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/tbb_thread.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/concurrent_hash_map.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/task_scheduler_observer.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/internal/_mutex_padding.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/parallel_scan.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/queuing_mutex.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/tbb_disable_exceptions.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/parallel_do.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/machine/gcc_arm.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/internal/_x86_eliding_mutex_impl.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/tbbmalloc_proxy.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/internal/_flow_graph_item_buffer_impl.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/recursive_mutex.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/machine/linux_ia64.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/task_group.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/tbb_exception.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/aligned_space.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/flow_graph.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/flow_graph_opencl_node.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/machine/gcc_itsx.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/parallel_while.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/combinable.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/null_mutex.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/machine/windows_ia32.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/mutex.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/index.html
E:/CLionProjects/MYtoolForMSVC/include/tbb/internal/_flow_graph_tagged_buffer_impl.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/machine/msvc_ia32_common.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/parallel_for.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/tbb_config.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/machine/sunos_sparc.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/scalable_allocator.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/machine/gcc_ia32_common.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/runtime_loader.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/internal/_range_iterator.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/machine/macos_common.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/concurrent_vector.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/machine/ibm_aix51.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/internal/_flow_graph_impl.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/machine/mac_ppc.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/internal/_tbb_hash_compare_impl.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/pipeline.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/internal/_allocator_traits.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/internal/_flow_graph_cache_impl.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/machine/linux_ia32.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/internal/_aggregator_impl.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/machine/linux_common.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/internal/_tbb_trace_impl.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/tick_count.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/task.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/internal/_flow_graph_types_impl.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/internal/_concurrent_unordered_impl.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/concurrent_lru_cache.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/parallel_for_each.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/blocked_rangeNd.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/task_scheduler_init.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/flow_graph_abstractions.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/spin_rw_mutex.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/concurrent_unordered_set.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/machine/mic_common.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/spin_mutex.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/null_rw_mutex.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/enumerable_thread_specific.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/internal/_flow_graph_node_impl.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/compat/ppl.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/cache_aligned_allocator.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/machine/windows_intel64.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/internal/_flow_graph_join_impl.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/internal/_flow_graph_streaming_node.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/reader_writer_lock.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/task_arena.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/machine/linux_intel64.h
E:/CLionProjects/MYtoolForMSVC/include/tbb/concurrent_priority_queue.h
D:/ProgramData/Anaconda3/include/Python.h
)
TARGET_LINK_LIBRARIES(HedgeArbitrage 
E:/CLionProjects/MYtoolForMSVC/bin/ocilib4.6.3/ociliba.lib
E:/CLionProjects/MYtoolForMSVC/bin/tbb/libtbb.dll.a
E:/CLionProjects/MYtoolForMSVC/bin/tbb/libtbbmalloc.dll.a
E:/CLionProjects/MYtoolForMSVC/bin/libopenblas.lib
E:/CLionProjects/MYtoolForMSVC/bin/fftw-3.3.5-dll64/libfftw3-3.lib
E:/CLionProjects/MYtoolForMSVC/bin/tbb/libtbbmalloc_proxy.dll.a
E:/CLionProjects/MYtoolForMSVC/bin/ocilib4.6.3/ocilibw.lib
E:/CLionProjects/MYtoolForMSVC/bin/fftw-3.3.5-dll64/libfftw3l-3.lib
E:/CLionProjects/MYtoolForMSVC/bin/fftw-3.3.5-dll64/libfftw3f-3.lib
D:/boost_1_72_0/bin.v2/libs/context/build/msvc-14.2/release/address-model-64/link-static/threading-multi/libboost_context-vc142-mt-x64-1_72.lib
python36.lib
imagehlp.lib
)
TARGET_LINK_LIBRARIES(HedgeArbitrage 
)
